--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -21,13 +21,210 @@
         padding: 10px 20px;
     }
 
-        .isi-navbar-mobile a {
-            text-decoration: none;
-            color: white;
-            font-size: 25px;
-            margin-left: 5px;
-            font-weight: 600;
-        }
+    .isi-navbar-mobile a {
+        text-decoration: none;
+        color: white;
+        font-size: 25px;
+        margin-left: 5px;
+        font-weight: 600;
+    }
+
+    .logo-mobile {
+        display: flex;
+        align-items: center;
+    }
+
+    .text-landing-page {
+        margin-top: 5rem;
+    }
+
+    .text-landing-page h1 {
+        font-size: 3rem;
+    }
+
+    .text-landing-page h2 {
+        font-size: 1.5rem;
+    }
+
+    .logo-mobile img {
+        width: 71px;
+        height: 71px;
+    }
+
+    /* hamburger */
+    .menu-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 40px;
+        height: 30px;
+        cursor: pointer;
+        padding: 5px;
+    }
+
+    .menu-icon span {
+        display: block;
+        height: 4px;
+        width: 100%;
+        background-color: white;
+        border-radius: 2px;
+        transition: 0.4s ease;
+        transform-origin: center;
+    }
+
+    .menu-icon.active span:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-icon.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-icon.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(6px, -6px);
+    }
+
+    /* akhir hamburger */
+
+    /* sidebar */
+    /* overlay */
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #27ad95;
+        z-index: 999;
+        visibility: hidden;
+    }
+
+    /* Saat sidebar aktif */
+    .overlay.show {
+        opacity: 0.2;
+        visibility: visible;
+    }
+
+    /* akhir overlay */
+
+    /* Sidebar default tersembunyi */
+    .sidebar {
+
+        position: fixed;
+        top: 0;
+        right: -100vw;
+        /* Tersembunyi di kanan */
+        width: 60vw;
+        height: 100vh;
+        background-color: #0b9388;
+        color: white;
+        padding: 20px;
+        transition: right 0.3s ease;
+        /* ubah dari left ke right */
+        z-index: 1000;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .icon-tambahan {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #fff;
+        padding: 50%;
+    }
+
+    /* Sidebar muncul saat class .show aktif */
+    .sidebar.show {
+        right: 0;
+    }
+
+
+    /* Link sidebar */
+
+    .sidebar-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+        justify-content: left;
+        gap: 1rem;
+    }
+
+    .toggle-btn {
+        position: absolute;
+        top: 20px;
+        left: -15px;
+        width: 30px;
+        height: 30px;
+        background-color: white;
+        border-radius: 50%;
+        color: #0b9388;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease;
+    }
+
+
+
+    .nav-item {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 10px 15px;
+        border-radius: 8px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+    }
+
+    .nav-item a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .nav-item:hover {
+        background-color: #eef3ff;
+        color: #0b9388;
+    }
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 600px) {
+    .navbar-desktop {
+        display: none;
+    }
+
+    .navbar-mobile {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        background-color: #31c1a5;
+        z-index: 999;
+        /* Biar di atas konten lain */
+    }
+
+    .isi-navbar-mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+    }
+
+    .isi-navbar-mobile a {
+        text-decoration: none;
+        color: white;
+        font-size: 25px;
+        margin-left: 5px;
+        font-weight: 600;
+    }
 
     .logo-mobile {
         display: flex;
@@ -73,81 +270,158 @@
     }
 
     /* akhir hamburger */
-}
 
-@media screen and (min-width: 320px) and (max-width: 600px) {
-    .navbar-desktop {
-            display: none;
-        }
-    
-        .navbar-mobile {
-            position: fixed;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            background-color: #31c1a5;
-            z-index: 999;
-            /* Biar di atas konten lain */
-        }
-    
-        .isi-navbar-mobile {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-        }
-    
-        .isi-navbar-mobile a {
-            text-decoration: none;
-            color: white;
-            font-size: 25px;
-            margin-left:5px;
-            font-weight: 600;
-        }
-    
-        .logo-mobile {
-            display: flex;
-            align-items: center;
-        }
-    
-        .logo-mobile img {
-            width: 71px;
-            height: 71px;
-        }
-    
-        /* hamburger */
-        .menu-icon {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 40px;
-            height: 30px;
-            cursor: pointer;
-            padding: 5px;
-        }
-    
-        .menu-icon span {
-            display: block;
-            height: 4px;
-            width: 100%;
-            background-color: white;
-            border-radius: 2px;
-            transition: 0.4s ease;
-            transform-origin: center;
-        }
-    
-        .menu-icon.active span:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-    
-        .menu-icon.active span:nth-child(2) {
-            opacity: 0;
-        }
-    
-        .menu-icon.active span:nth-child(3) {
-            transform: rotate(-45deg) translate(6px, -6px);
-        }
-    
-        /* akhir hamburger */
+    /* sidebar */
+    /* overlay */
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #27ad95;
+        z-index: 999;
+        visibility: hidden;
+    }
+
+    /* Saat sidebar aktif */
+    .overlay.show {
+        opacity: 0.2;
+        visibility: visible;
+    }
+
+    /* akhir overlay */
+
+    /* Sidebar default tersembunyi */
+    .sidebar {
+
+        position: fixed;
+        top: 0;
+        right: -100vw;
+        /* Tersembunyi di kanan */
+        width: 60vw;
+        height: 100vh;
+        background-color: #0b9388;
+        color: white;
+        padding: 20px;
+        transition: right 0.3s ease;
+        /* ubah dari left ke right */
+        z-index: 1000;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .icon-tambahan {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: #fff;
+        padding: 50%;
+    }
+
+    /* Sidebar muncul saat class .show aktif */
+    .sidebar.show {
+        right: 0;
+    }
+
+
+    /* Link sidebar */
+
+    .sidebar-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+        justify-content: left;
+        gap: 1rem;
+    }
+
+    .toggle-btn {
+        position: absolute;
+        top: 20px;
+        left: -15px;
+        width: 30px;
+        height: 30px;
+        background-color: white;
+        border-radius: 50%;
+        color: #0b9388;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease;
+    }
+
+    .nav-item {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 10px 15px;
+        border-radius: 8px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+    }
+
+    .nav-item a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .nav-item:hover {
+        background-color: #eef3ff;
+        color: #0b9388;
+    }
+
+    .landing-page .paralax {
+        margin-top: 5rem;
+    }
+
+    .landing-page .paralax .gambar2 {
+        margin-top: 18rem;
+    }
+
+    .text-landing-page {
+        margin-top: 5rem;
+
+    }
+
+    .text-landing-page h1 {
+        font-size: 2.6rem;
+        color: #fff;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+    .text-landing-page h2 {
+        font-size: 1.5rem;
+        color: #fff;
+        text-align: center;
+    }
+
+    .text-landing-page p {
+        font-size: 1.2rem;
+        color: black;
+        text-align: center;
+    }
+
+    .pembungkus-dosen{
+        display:flex;
+        flex-direction:column;
+    }
+
+    .gambar-dosen{
+        width:200px;
+        height:max-content;
+        margin-left:3rem;
+        margin-bottom:1rem;
+    }
+
+    .judul-dosen{
+        padding-top:1.5rem !important;
+        padding-bottom:1rem !important;
+    }
 }
