--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1242,6 +1242,14 @@ button:hover .tooltip {
     padding-bottom:2rem;
 }
 
+.about-description{
+    padding-inline: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
+    justify-content: center;
+    text-align: center;
+    padding-top: 5rem;
+}
+
 .about-title {
     font-size: 7.5rem;
     font-weight: 900;
@@ -1253,6 +1261,7 @@ button:hover .tooltip {
     transform: translateX(-50%);
     width: 100%;
     max-width: 100%;
+    height: 500px;
     text-align: center;
     background: linear-gradient(to bottom,
                 rgb(8 42 123 / 35%) 30%,
@@ -1635,7 +1644,7 @@ button:hover .tooltip {
 /* akhir artikel */
 
 /* footer */
-.footer{
+/* .footer{
     width:100%;
     height:max-content;
     display:flex;
@@ -1656,6 +1665,149 @@ button:hover .tooltip {
 }
 
 .copyright-text a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    text-decoration: underline;
+} */
+
+/* =============== section Footer ================ */
+footer {
+    background-color: #064e3b;
+    font-family: Arial, sans-serif;  
+    color: white;
+}
+
+.footer-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    column-gap:9rem;
+    flex-direction: row;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-text {
+    display: flex;
+    position: relative;
+    padding: 30px 20px 0 20px;
+    gap:140px;
+}
+
+.footer-section h4 {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+
+}
+
+.footer-section .halo{
+  width:300px;
+  overflow: hidden;
+  text-align: justify;
+  height:60px;
+  padding-bottom:13rem;
+}
+
+.footer-section ul li {
+    list-style: none;
+    margin: 15px 0;
+}
+
+.footer-section ul li a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    font-size: 1.0em;
+}
+
+.footer-section ul li a:hover {
+    color: #b3b3b3;
+}
+
+.logo-section {
+    text-align: center;
+    max-width: 170px;
+    margin: 20px 0 0 40px;
+}
+
+.logo-footer {
+    width: 170px;
+    height: 170px;
+    justify-content: center;
+    text-align: center;
+}
+
+.logo-section h3 {
+    font-size: 1.2em;
+    letter-spacing: 1px;
+}
+
+.footer-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #064e3b;
+}
+
+hr {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.footer-bottom p {
+    margin: 5px 0;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+}
+
+.footer-logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo {
+    max-width: 50px;
+    margin: 10px 10px 10px 0;
+}
+
+.footer-logo-container p {
+    margin: 0;
+    color: white;
+    font-size: 18px;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
+.social-icons a {
+    text-decoration: none;
+    color: white;
+    margin: 0 5px;
+    font-size: 20px;
+    transition: color 0.3s ease;
+    background-color: #ffffff0c;
+    border-radius: 50%;
+    line-height: 2px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-icons a:hover {
+    color: #064e3b;
+    background-color: white;
+}
+
+.copyright-text{
     color: #fff;
     text-decoration: none;
     font-weight: bold;
